  [Michele Simionato]
  * Reduced the number of tasks generated when filter_sources is False
  * Saved engine_version and hazardlib_version as attributes of the datastore
  * Avoided saving the ruptures when ground_motion_fields is True
  * Finalized the HDF5 export for hazard curves, hazard maps and uniform
    hazard spectra
  * Restored a weight of 1 for each rupture in the event based calculator
  * Removed the MultiHazardCurveXMLWriter
  * Improved the saving of the ruptures in event based calculations
  * Reduced the data transfer due to the `rlzs_by_gsim` parameter
  * Added an HDF5 export for scenario GMFs
  * If `filter_sources` if false, the light sources are not filtered, but the
    heavy sources are always filtered
  * Now the dbserver can be stopped correctly with CTRL-C
  * Parallelized the splitting of heavy sources
  * Changed the event loss table exporter: now a single file per realization
    is exported, containing all the loss types
  * Removed the dependency from the Django ORM
  * Now the WebUI restarts the ProcessPoolExecutor at the end of each job,
    to conserve resources
  * Optimized the computation of hazard curves and statistics, especially
    for the memory consumption
  * Reduced the data transfer due to the `rlzs_assoc` and `oqparam` objects
  * Fixed a bug in the disaggregation calculator when a source group has
    been filtered away by the maximum distance criterium
  * Fixed an encoding error in the reports when the description contains a
    non-ASCII character
  * Changed the distribution framework: celery is supported in a way more
    consistent with the other approaches; moreover, ipyparallel is supported
  * Hazard maps are now a fake output, dynamically generated at export time
  * Made the number of produced tasks proportional to the number of tiles
  * Raised an error for event_based_risk producing no GMFs
  * Added a view for the slow sources
  * Transmitted the attributes of a SourceGroup to the underlying sources