@@ -1,4 +1,5 @@
   [Michele Simionato]
+  * Filtered the sources up front when there are few sites (<= 10)
   * Reduced the number of tasks generated when filter_sources is False
   * Saved engine_version and hazardlib_version as attributes of the datastore
   * Avoided saving the ruptures when ground_motion_fields is True
